force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/OM_Bot_Service_Information_Relationship__mdt.object-meta.xml
<CustomObject>
    <description>Relaciona los menús que deben de mostrarse en la rama de Información de servicio</description>
    <label>Bot - Service Information Relationship</label>
    <pluralLabel>Bot - Service Information Relationship</pluralLabel>
</CustomObject>