force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Chat_Label__c.field-meta.xml
<CustomField>
    <fullName>OM_Chat_Label__c</fullName>
    <description>Texto que aparecerá en el menú de chat.</description>
    <label>Chat Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>