force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Chat_Root__c.field-meta.xml
<CustomField>
    <fullName>OM_Chat_Root__c</fullName>
    <description>Valor clave que se utiliza para saber qué opciones mostrar en el menú. Coincide con la palabra seleccionada en el menú anterior.</description>
    <label>Chat Root</label>
    <length>255</length>
    <type>Text</type>
</CustomField>