force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Info_URL__c.field-meta.xml
<CustomField>
    <fullName>OM_Info_URL__c</fullName>
    <description>Almacena la url que se muestra en el bot</description>
    <label>Info URL</label>
    <type>Url</type>
</CustomField>