force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Order__c.field-meta.xml
<CustomField>
    <fullName>OM_Order__c</fullName>
    <description>Orden en el que aparece dentro de la pantalla del menú</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>