force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Other_Exit__c.field-meta.xml
<CustomField>
    <fullName>OM_Other_Exit__c</fullName>
    <label>Otra/Salir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Otra consulta</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Salir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>