force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Whatsapp_Label__c.field-meta.xml
<CustomField>
    <fullName>OM_Whatsapp_Label__c</fullName>
    <description>Texto que se muestra en el menú de whatsapp</description>
    <label>Whatsapp Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>