force-app/main/default/objects/OM_Bot_Service_Information_Relationship__mdt/fields/OM_Whatsapp_Root__c.field-meta.xml
<CustomField>
    <fullName>OM_Whatsapp_Root__c</fullName>
    <description>Palabra clave que se utiliza para saber qué opciones mostrar en el menú. Se compone del número de pantalla donde se ha seleccionado la opción anterior y el valor marcado (ej: 1_1)</description>
    <label>Whatsapp Root</label>
    <length>255</length>
    <type>Text</type>
</CustomField>